--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
 steps:
 - task: SonarQubePrepare@4
   inputs:
-    SonarQube: 'code scan'
+    SonarQube: 'test_code_scan'
     scannerMode: 'Other'
 - task: Maven@3
   inputs:
